BUG: Устранены утечка файлов и гонка состояний в FileStorageService