@@ -12,20 +12,29 @@ import java.util.ArrayList;
 import java.util.List;
 
 /**
- * Main class - CLI entry point.
- * 
- * Usage:
- *   java -jar tcleaner.jar [OPTIONS] [INPUT_DIR]
- * 
- * Options:
- *   -i, --input <path>        Input directory (default: current directory)
- *   -o, --output <path>      Output file (default: tcleaner_output.txt)
- *   -s, --start-date <date>  Start date filter (YYYY-MM-DD)
- *   -e, --end-date <date>    End date filter (YYYY-MM-DD)
- *   -k, --keyword &lt;word&gt;     Include only messages with keyword
- *   -x, --exclude &lt;word&gt;     Exclude messages with keyword
- *   -v, --verbose            Verbose output
- *   --help                   Show help
+ * Точка входа для CLI-режима приложения.
+ *
+ * <p>Запускается напрямую или через {@link TelegramCleanerApplication} при передаче
+ * флага {@code --cli}:</p>
+ * <pre>{@code
+ * java -jar tcleaner.jar --cli -i /path/to/export -o output.txt
+ * }</pre>
+ *
+ * <h2>Опции командной строки</h2>
+ * <pre>
+ *   -i, --input   &lt;path&gt;   Папка с result.json (по умолчанию: текущая директория)
+ *   -o, --output  &lt;path&gt;   Выходной файл (по умолчанию: tcleaner_output.txt)
+ *   -s, --start-date &lt;date&gt; Начальная дата фильтра (YYYY-MM-DD)
+ *   -e, --end-date   &lt;date&gt; Конечная дата фильтра (YYYY-MM-DD)
+ *   -k, --keyword    &lt;word&gt; Включать только сообщения с ключевым словом
+ *   -x, --exclude    &lt;word&gt; Исключать сообщения с ключевым словом
+ *   -v, --verbose           Подробный вывод
+ *       --help              Справка
+ * </pre>
+ *
+ * <p>Запись в выходной файл делегируется в {@link TelegramExporter#processFileToFile},
+ * который использует {@code Files.write(path, lines)} — без промежуточного
+ * {@code String.join} и связанного с ним двойного пика потребления памяти.</p>
  */
 public class Main {
 
@@ -55,6 +64,14 @@ public class Main {
     @Parameter(names = {"--help"}, help = true)
     private boolean help = false;
 
+    /**
+     * Точка входа CLI.
+     *
+     * <p>Парсит аргументы через JCommander и вызывает {@link #run()}.
+     * При ошибке парсинга выводит сообщение, справку и завершается с кодом 1.</p>
+     *
+     * @param args аргументы командной строки
+     */
     public static void main(String[] args) {
         Main main = new Main();
         JCommander commander = JCommander.newBuilder()
@@ -79,6 +96,16 @@ public class Main {
         main.run();
     }
 
+    /**
+     * Выполняет обработку: читает {@code result.json}, применяет фильтры и
+     * записывает результат в выходной файл.
+     *
+     * <p>Запись делегируется в {@link TelegramExporter#processFileToFile}, который
+     * использует {@code Files.write(path, lines)} — без промежуточного
+     * {@code String.join} и удвоения памяти.</p>
+     *
+     * <p>При ошибке выводит сообщение в {@code stderr} и завершается с кодом 1.</p>
+     */
     private void run() {
         try {
             Path inputDir = Paths.get(inputPath);
@@ -98,16 +125,25 @@ public class Main {
                     startDate, endDate,
                     keywords.isEmpty() ? null : String.join(",", keywords),
                     excludeKeywords.isEmpty() ? null : String.join(",", excludeKeywords));
-            List<String> processed = exporter.processFile(resultFile, filter);
 
             Path outputFile = Paths.get(outputPath);
-            Files.writeString(outputFile, String.join("\n", processed) + "\n");
+            // Делегируем запись в processFileToFile: использует Files.write(path, lines)
+            // — без промежуточного String.join, без двойного пика памяти.
+            exporter.processFileToFile(resultFile, outputFile, filter);
+
+            // try-with-resources обязателен: Files.lines держит открытый файловый
+            // дескриптор до закрытия потока — без него утечка ресурсов на любой ОС,
+            // а на Windows ещё и блокировка файла.
+            long messageCount;
+            try (var lineStream = Files.lines(outputFile)) {
+                messageCount = lineStream.count();
+            }
 
             if (verbose) {
                 System.out.println("Output written to: " + outputFile.toAbsolutePath());
-                System.out.println("Total messages: " + processed.size());
+                System.out.println("Total messages: " + messageCount);
             } else {
-                System.out.println("Done! Processed " + processed.size() + " messages.");
+                System.out.println("Done! Processed " + messageCount + " messages.");
             }
 
         } catch (IOException e) {
@@ -118,6 +154,4 @@ public class Main {
             System.exit(1);
         }
     }
-
 }
-
